Adição das cores do Material3
Rebase do commit:
- Update Colors

--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -1,10 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#12658A</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#76B9E1</color>
+    <color name="md_theme_onPrimaryContainer">#00293C</color>
+    <color name="md_theme_secondary">#020083</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#2126C3</color>
+    <color name="md_theme_onSecondaryContainer">#D7D7FF</color>
+    <color name="md_theme_tertiary">#426276</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#CDEAFF</color>
+    <color name="md_theme_onTertiaryContainer">#2D4E61</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#F8F9FD</color>
+    <color name="md_theme_onBackground">#191C1E</color>
+    <color name="md_theme_surface">#F8F9FD</color>
+    <color name="md_theme_onSurface">#191C1E</color>
+    <color name="md_theme_surfaceVariant">#DCE3EB</color>
+    <color name="md_theme_onSurfaceVariant">#40484E</color>
+    <color name="md_theme_outline">#70787E</color>
+    <color name="md_theme_outlineVariant">#C0C7CE</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2E3133</color>
+    <color name="md_theme_inverseOnSurface">#EFF1F4</color>
+    <color name="md_theme_inversePrimary">#8CCEF8</color>
+    <color name="md_theme_primaryFixed">#C5E7FF</color>
+    <color name="md_theme_onPrimaryFixed">#001E2D</color>
+    <color name="md_theme_primaryFixedDim">#8CCEF8</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004C6A</color>
+    <color name="md_theme_secondaryFixed">#E0E0FF</color>
+    <color name="md_theme_onSecondaryFixed">#01006E</color>
+    <color name="md_theme_secondaryFixedDim">#BFC2FF</color>
+    <color name="md_theme_onSecondaryFixedVariant">#262BC6</color>
+    <color name="md_theme_tertiaryFixed">#C5E7FF</color>
+    <color name="md_theme_onTertiaryFixed">#001E2D</color>
+    <color name="md_theme_tertiaryFixedDim">#A9CBE2</color>
+    <color name="md_theme_onTertiaryFixedVariant">#294A5E</color>
+    <color name="md_theme_surfaceDim">#D8DADD</color>
+    <color name="md_theme_surfaceBright">#F8F9FD</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F2F4F7</color>
+    <color name="md_theme_surfaceContainer">#ECEEF1</color>
+    <color name="md_theme_surfaceContainerHigh">#E6E8EB</color>
+    <color name="md_theme_surfaceContainerHighest">#E1E2E6</color>
+    <color name="md_theme_primary_mediumContrast">#004865</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#347BA1</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#020083</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#2126C3</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#25465A</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#58798E</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F8F9FD</color>
+    <color name="md_theme_onBackground_mediumContrast">#191C1E</color>
+    <color name="md_theme_surface_mediumContrast">#F8F9FD</color>
+    <color name="md_theme_onSurface_mediumContrast">#191C1E</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DCE3EB</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3C444A</color>
+    <color name="md_theme_outline_mediumContrast">#586066</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#747C82</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2E3133</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#EFF1F4</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#8CCEF8</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#347BA1</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#0D6287</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#5A62F5</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#3F47DB</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#58798E</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#3F6074</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#D8DADD</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F8F9FD</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F2F4F7</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#ECEEF1</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E6E8EB</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E1E2E6</color>
+    <color name="md_theme_primary_highContrast">#002536</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#004865</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#020083</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#2126C3</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#002536</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#25465A</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F8F9FD</color>
+    <color name="md_theme_onBackground_highContrast">#191C1E</color>
+    <color name="md_theme_surface_highContrast">#F8F9FD</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DCE3EB</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#1D252A</color>
+    <color name="md_theme_outline_highContrast">#3C444A</color>
+    <color name="md_theme_outlineVariant_highContrast">#3C444A</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2E3133</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#DAEFFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#004865</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#003045</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#2025C3</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#0300A1</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#25465A</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#0A3042</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#D8DADD</color>
+    <color name="md_theme_surfaceBright_highContrast">#F8F9FD</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F2F4F7</color>
+    <color name="md_theme_surfaceContainer_highContrast">#ECEEF1</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#E6E8EB</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E1E2E6</color>
 </resources>
