--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="md_theme_onSecondary">#FFFFFF</color>
     <color name="md_theme_secondaryContainer">#2126C3</color>
     <color name="md_theme_onSecondaryContainer">#D7D7FF</color>
-    <color name="md_theme_tertiary">#5F009A</color>
+    <color name="md_theme_tertiary">#426276</color>
     <color name="md_theme_onTertiary">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer">#8A2ED0</color>
-    <color name="md_theme_onTertiaryContainer">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#CDEAFF</color>
+    <color name="md_theme_onTertiaryContainer">#2D4E61</color>
     <color name="md_theme_error">#BA1A1A</color>
     <color name="md_theme_onError">#FFFFFF</color>
     <color name="md_theme_errorContainer">#FFDAD6</color>
@@ -35,10 +35,10 @@
     <color name="md_theme_onSecondaryFixed">#01006E</color>
     <color name="md_theme_secondaryFixedDim">#BFC2FF</color>
     <color name="md_theme_onSecondaryFixedVariant">#262BC6</color>
-    <color name="md_theme_tertiaryFixed">#F2DAFF</color>
-    <color name="md_theme_onTertiaryFixed">#2E004E</color>
-    <color name="md_theme_tertiaryFixedDim">#E0B6FF</color>
-    <color name="md_theme_onTertiaryFixedVariant">#6C00AE</color>
+    <color name="md_theme_tertiaryFixed">#C5E7FF</color>
+    <color name="md_theme_onTertiaryFixed">#001E2D</color>
+    <color name="md_theme_tertiaryFixedDim">#A9CBE2</color>
+    <color name="md_theme_onTertiaryFixedVariant">#294A5E</color>
     <color name="md_theme_surfaceDim">#D8DADD</color>
     <color name="md_theme_surfaceBright">#F8F9FD</color>
     <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
@@ -54,9 +54,9 @@
     <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
     <color name="md_theme_secondaryContainer_mediumContrast">#2126C3</color>
     <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_mediumContrast">#5F009A</color>
+    <color name="md_theme_tertiary_mediumContrast">#25465A</color>
     <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_mediumContrast">#8A2ED0</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#58798E</color>
     <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
     <color name="md_theme_error_mediumContrast">#8C0009</color>
     <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
@@ -82,9 +82,9 @@
     <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
     <color name="md_theme_secondaryFixedDim_mediumContrast">#3F47DB</color>
     <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_mediumContrast">#9F47E5</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#58798E</color>
     <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_mediumContrast">#8427CA</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#3F6074</color>
     <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
     <color name="md_theme_surfaceDim_mediumContrast">#D8DADD</color>
     <color name="md_theme_surfaceBright_mediumContrast">#F8F9FD</color>
@@ -101,9 +101,9 @@
     <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
     <color name="md_theme_secondaryContainer_highContrast">#2126C3</color>
     <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiary_highContrast">#37005D</color>
+    <color name="md_theme_tertiary_highContrast">#002536</color>
     <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryContainer_highContrast">#6600A6</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#25465A</color>
     <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
     <color name="md_theme_error_highContrast">#4E0002</color>
     <color name="md_theme_onError_highContrast">#FFFFFF</color>
@@ -129,9 +129,9 @@
     <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
     <color name="md_theme_secondaryFixedDim_highContrast">#0300A1</color>
     <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixed_highContrast">#6600A6</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#25465A</color>
     <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
-    <color name="md_theme_tertiaryFixedDim_highContrast">#460074</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#0A3042</color>
     <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
     <color name="md_theme_surfaceDim_highContrast">#D8DADD</color>
     <color name="md_theme_surfaceBright_highContrast">#F8F9FD</color>
