--- a/app/app/src/main/res/values-night/colors.xml
+++ b/app/app/src/main/res/values-night/colors.xml
@@ -1,143 +1,143 @@
 <resources>
-    <color name="md_theme_primary">#91CEF5</color>
+    <color name="md_theme_primary">#8CCFF8</color>
     <color name="md_theme_onPrimary">#00344B</color>
-    <color name="md_theme_primaryContainer">#004C6A</color>
-    <color name="md_theme_onPrimaryContainer">#C5E7FF</color>
+    <color name="md_theme_primaryContainer">#63A6CE</color>
+    <color name="md_theme_onPrimaryContainer">#00131E</color>
     <color name="md_theme_secondary">#BFC2FF</color>
-    <color name="md_theme_onSecondary">#272B60</color>
-    <color name="md_theme_secondaryContainer">#3E4278</color>
-    <color name="md_theme_onSecondaryContainer">#E0E0FF</color>
-    <color name="md_theme_tertiary">#DDB9F7</color>
-    <color name="md_theme_onTertiary">#402357</color>
-    <color name="md_theme_tertiaryContainer">#583A6F</color>
-    <color name="md_theme_onTertiaryContainer">#F2DAFF</color>
+    <color name="md_theme_onSecondary">#0300AC</color>
+    <color name="md_theme_secondaryContainer">#0300A1</color>
+    <color name="md_theme_onSecondaryContainer">#AFB3FF</color>
+    <color name="md_theme_tertiary">#FFFFFF</color>
+    <color name="md_theme_onTertiary">#0F3446</color>
+    <color name="md_theme_tertiaryContainer">#B7D9F1</color>
+    <color name="md_theme_onTertiaryContainer">#214356</color>
     <color name="md_theme_error">#FFB4AB</color>
     <color name="md_theme_onError">#690005</color>
     <color name="md_theme_errorContainer">#93000A</color>
     <color name="md_theme_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_background">#0F1417</color>
-    <color name="md_theme_onBackground">#DFE3E7</color>
-    <color name="md_theme_surface">#0F1417</color>
-    <color name="md_theme_onSurface">#DFE3E7</color>
-    <color name="md_theme_surfaceVariant">#41484D</color>
-    <color name="md_theme_onSurfaceVariant">#C1C7CE</color>
-    <color name="md_theme_outline">#8B9297</color>
-    <color name="md_theme_outlineVariant">#41484D</color>
+    <color name="md_theme_background">#111416</color>
+    <color name="md_theme_onBackground">#E1E2E6</color>
+    <color name="md_theme_surface">#111416</color>
+    <color name="md_theme_onSurface">#E1E2E6</color>
+    <color name="md_theme_surfaceVariant">#40484E</color>
+    <color name="md_theme_onSurfaceVariant">#C0C7CE</color>
+    <color name="md_theme_outline">#8A9298</color>
+    <color name="md_theme_outlineVariant">#40484E</color>
     <color name="md_theme_scrim">#000000</color>
-    <color name="md_theme_inverseSurface">#DFE3E7</color>
-    <color name="md_theme_inverseOnSurface">#2C3134</color>
-    <color name="md_theme_inversePrimary">#1F6587</color>
+    <color name="md_theme_inverseSurface">#E1E2E6</color>
+    <color name="md_theme_inverseOnSurface">#2E3133</color>
+    <color name="md_theme_inversePrimary">#12658A</color>
     <color name="md_theme_primaryFixed">#C5E7FF</color>
     <color name="md_theme_onPrimaryFixed">#001E2D</color>
-    <color name="md_theme_primaryFixedDim">#91CEF5</color>
+    <color name="md_theme_primaryFixedDim">#8CCEF8</color>
     <color name="md_theme_onPrimaryFixedVariant">#004C6A</color>
     <color name="md_theme_secondaryFixed">#E0E0FF</color>
-    <color name="md_theme_onSecondaryFixed">#11144B</color>
+    <color name="md_theme_onSecondaryFixed">#01006E</color>
     <color name="md_theme_secondaryFixedDim">#BFC2FF</color>
-    <color name="md_theme_onSecondaryFixedVariant">#3E4278</color>
-    <color name="md_theme_tertiaryFixed">#F2DAFF</color>
-    <color name="md_theme_onTertiaryFixed">#2A0C41</color>
-    <color name="md_theme_tertiaryFixedDim">#DDB9F7</color>
-    <color name="md_theme_onTertiaryFixedVariant">#583A6F</color>
-    <color name="md_theme_surfaceDim">#0F1417</color>
-    <color name="md_theme_surfaceBright">#353A3D</color>
-    <color name="md_theme_surfaceContainerLowest">#0A0F12</color>
-    <color name="md_theme_surfaceContainerLow">#181C1F</color>
-    <color name="md_theme_surfaceContainer">#1C2024</color>
-    <color name="md_theme_surfaceContainerHigh">#262B2E</color>
-    <color name="md_theme_surfaceContainerHighest">#313539</color>
-    <color name="md_theme_primary_mediumContrast">#95D2F9</color>
+    <color name="md_theme_onSecondaryFixedVariant">#262BC6</color>
+    <color name="md_theme_tertiaryFixed">#C5E7FF</color>
+    <color name="md_theme_onTertiaryFixed">#001E2D</color>
+    <color name="md_theme_tertiaryFixedDim">#A9CBE2</color>
+    <color name="md_theme_onTertiaryFixedVariant">#294A5E</color>
+    <color name="md_theme_surfaceDim">#111416</color>
+    <color name="md_theme_surfaceBright">#363A3C</color>
+    <color name="md_theme_surfaceContainerLowest">#0B0F11</color>
+    <color name="md_theme_surfaceContainerLow">#191C1E</color>
+    <color name="md_theme_surfaceContainer">#1D2023</color>
+    <color name="md_theme_surfaceContainerHigh">#272A2D</color>
+    <color name="md_theme_surfaceContainerHighest">#323538</color>
+    <color name="md_theme_primary_mediumContrast">#90D3FC</color>
     <color name="md_theme_onPrimary_mediumContrast">#001925</color>
-    <color name="md_theme_primaryContainer_mediumContrast">#5A98BC</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#63A6CE</color>
     <color name="md_theme_onPrimaryContainer_mediumContrast">#000000</color>
     <color name="md_theme_secondary_mediumContrast">#C4C6FF</color>
-    <color name="md_theme_onSecondary_mediumContrast">#0B0E46</color>
-    <color name="md_theme_secondaryContainer_mediumContrast">#888CC8</color>
+    <color name="md_theme_onSecondary_mediumContrast">#01005E</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#7D84FF</color>
     <color name="md_theme_onSecondaryContainer_mediumContrast">#000000</color>
-    <color name="md_theme_tertiary_mediumContrast">#E2BDFC</color>
-    <color name="md_theme_onTertiary_mediumContrast">#24063B</color>
-    <color name="md_theme_tertiaryContainer_mediumContrast">#A583BF</color>
-    <color name="md_theme_onTertiaryContainer_mediumContrast">#000000</color>
+    <color name="md_theme_tertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_onTertiary_mediumContrast">#0F3446</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#B7D9F1</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#002232</color>
     <color name="md_theme_error_mediumContrast">#FFBAB1</color>
     <color name="md_theme_onError_mediumContrast">#370001</color>
     <color name="md_theme_errorContainer_mediumContrast">#FF5449</color>
     <color name="md_theme_onErrorContainer_mediumContrast">#000000</color>
-    <color name="md_theme_background_mediumContrast">#0F1417</color>
-    <color name="md_theme_onBackground_mediumContrast">#DFE3E7</color>
-    <color name="md_theme_surface_mediumContrast">#0F1417</color>
-    <color name="md_theme_onSurface_mediumContrast">#F8FBFF</color>
-    <color name="md_theme_surfaceVariant_mediumContrast">#41484D</color>
-    <color name="md_theme_onSurfaceVariant_mediumContrast">#C5CBD2</color>
-    <color name="md_theme_outline_mediumContrast">#9DA4AA</color>
-    <color name="md_theme_outlineVariant_mediumContrast">#7D848A</color>
+    <color name="md_theme_background_mediumContrast">#111416</color>
+    <color name="md_theme_onBackground_mediumContrast">#E1E2E6</color>
+    <color name="md_theme_surface_mediumContrast">#111416</color>
+    <color name="md_theme_onSurface_mediumContrast">#F9FBFE</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#40484E</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#C4CCD3</color>
+    <color name="md_theme_outline_mediumContrast">#9CA4AB</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#7C848B</color>
     <color name="md_theme_scrim_mediumContrast">#000000</color>
-    <color name="md_theme_inverseSurface_mediumContrast">#DFE3E7</color>
-    <color name="md_theme_inverseOnSurface_mediumContrast">#262B2E</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#E1E2E6</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#272A2D</color>
     <color name="md_theme_inversePrimary_mediumContrast">#004D6C</color>
     <color name="md_theme_primaryFixed_mediumContrast">#C5E7FF</color>
     <color name="md_theme_onPrimaryFixed_mediumContrast">#00131E</color>
-    <color name="md_theme_primaryFixedDim_mediumContrast">#91CEF5</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#8CCEF8</color>
     <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#003A53</color>
     <color name="md_theme_secondaryFixed_mediumContrast">#E0E0FF</color>
-    <color name="md_theme_onSecondaryFixed_mediumContrast">#050741</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#01004F</color>
     <color name="md_theme_secondaryFixedDim_mediumContrast">#BFC2FF</color>
-    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#2D3167</color>
-    <color name="md_theme_tertiaryFixed_mediumContrast">#F2DAFF</color>
-    <color name="md_theme_onTertiaryFixed_mediumContrast">#1E0136</color>
-    <color name="md_theme_tertiaryFixedDim_mediumContrast">#DDB9F7</color>
-    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#46295D</color>
-    <color name="md_theme_surfaceDim_mediumContrast">#0F1417</color>
-    <color name="md_theme_surfaceBright_mediumContrast">#353A3D</color>
-    <color name="md_theme_surfaceContainerLowest_mediumContrast">#0A0F12</color>
-    <color name="md_theme_surfaceContainerLow_mediumContrast">#181C1F</color>
-    <color name="md_theme_surfaceContainer_mediumContrast">#1C2024</color>
-    <color name="md_theme_surfaceContainerHigh_mediumContrast">#262B2E</color>
-    <color name="md_theme_surfaceContainerHighest_mediumContrast">#313539</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#0908B8</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#C5E7FF</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#00131E</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#A9CBE2</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#173A4C</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#111416</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#363A3C</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#0B0F11</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#191C1E</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#1D2023</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#272A2D</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#323538</color>
     <color name="md_theme_primary_highContrast">#F8FBFF</color>
     <color name="md_theme_onPrimary_highContrast">#000000</color>
-    <color name="md_theme_primaryContainer_highContrast">#95D2F9</color>
+    <color name="md_theme_primaryContainer_highContrast">#90D3FC</color>
     <color name="md_theme_onPrimaryContainer_highContrast">#000000</color>
     <color name="md_theme_secondary_highContrast">#FDF9FF</color>
     <color name="md_theme_onSecondary_highContrast">#000000</color>
     <color name="md_theme_secondaryContainer_highContrast">#C4C6FF</color>
     <color name="md_theme_onSecondaryContainer_highContrast">#000000</color>
-    <color name="md_theme_tertiary_highContrast">#FFF9FB</color>
+    <color name="md_theme_tertiary_highContrast">#FFFFFF</color>
     <color name="md_theme_onTertiary_highContrast">#000000</color>
-    <color name="md_theme_tertiaryContainer_highContrast">#E2BDFC</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#B7D9F1</color>
     <color name="md_theme_onTertiaryContainer_highContrast">#000000</color>
     <color name="md_theme_error_highContrast">#FFF9F9</color>
     <color name="md_theme_onError_highContrast">#000000</color>
     <color name="md_theme_errorContainer_highContrast">#FFBAB1</color>
     <color name="md_theme_onErrorContainer_highContrast">#000000</color>
-    <color name="md_theme_background_highContrast">#0F1417</color>
-    <color name="md_theme_onBackground_highContrast">#DFE3E7</color>
-    <color name="md_theme_surface_highContrast">#0F1417</color>
+    <color name="md_theme_background_highContrast">#111416</color>
+    <color name="md_theme_onBackground_highContrast">#E1E2E6</color>
+    <color name="md_theme_surface_highContrast">#111416</color>
     <color name="md_theme_onSurface_highContrast">#FFFFFF</color>
-    <color name="md_theme_surfaceVariant_highContrast">#41484D</color>
+    <color name="md_theme_surfaceVariant_highContrast">#40484E</color>
     <color name="md_theme_onSurfaceVariant_highContrast">#F8FBFF</color>
-    <color name="md_theme_outline_highContrast">#C5CBD2</color>
-    <color name="md_theme_outlineVariant_highContrast">#C5CBD2</color>
+    <color name="md_theme_outline_highContrast">#C4CCD3</color>
+    <color name="md_theme_outlineVariant_highContrast">#C4CCD3</color>
     <color name="md_theme_scrim_highContrast">#000000</color>
-    <color name="md_theme_inverseSurface_highContrast">#DFE3E7</color>
+    <color name="md_theme_inverseSurface_highContrast">#E1E2E6</color>
     <color name="md_theme_inverseOnSurface_highContrast">#000000</color>
     <color name="md_theme_inversePrimary_highContrast">#002E42</color>
     <color name="md_theme_primaryFixed_highContrast">#CFEBFF</color>
     <color name="md_theme_onPrimaryFixed_highContrast">#000000</color>
-    <color name="md_theme_primaryFixedDim_highContrast">#95D2F9</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#90D3FC</color>
     <color name="md_theme_onPrimaryFixedVariant_highContrast">#001925</color>
     <color name="md_theme_secondaryFixed_highContrast">#E5E4FF</color>
     <color name="md_theme_onSecondaryFixed_highContrast">#000000</color>
     <color name="md_theme_secondaryFixedDim_highContrast">#C4C6FF</color>
-    <color name="md_theme_onSecondaryFixedVariant_highContrast">#0B0E46</color>
-    <color name="md_theme_tertiaryFixed_highContrast">#F4E0FF</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#01005E</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#CFEBFF</color>
     <color name="md_theme_onTertiaryFixed_highContrast">#000000</color>
-    <color name="md_theme_tertiaryFixedDim_highContrast">#E2BDFC</color>
-    <color name="md_theme_onTertiaryFixedVariant_highContrast">#24063B</color>
-    <color name="md_theme_surfaceDim_highContrast">#0F1417</color>
-    <color name="md_theme_surfaceBright_highContrast">#353A3D</color>
-    <color name="md_theme_surfaceContainerLowest_highContrast">#0A0F12</color>
-    <color name="md_theme_surfaceContainerLow_highContrast">#181C1F</color>
-    <color name="md_theme_surfaceContainer_highContrast">#1C2024</color>
-    <color name="md_theme_surfaceContainerHigh_highContrast">#262B2E</color>
-    <color name="md_theme_surfaceContainerHighest_highContrast">#313539</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#AECFE7</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#001925</color>
+    <color name="md_theme_surfaceDim_highContrast">#111416</color>
+    <color name="md_theme_surfaceBright_highContrast">#363A3C</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#0B0F11</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#191C1E</color>
+    <color name="md_theme_surfaceContainer_highContrast">#1D2023</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#272A2D</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#323538</color>
 </resources>
